k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churn-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: churn-api
  template:
    metadata:
      labels:
        app: churn-api
    spec:
      containers:
      - name: churn-api
        image: 539188695824.dkr.ecr.ap-south-1.amazonaws.com/churn-api:latest
        ports:
        - containerPort: 8000
