k8s/mlflow-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow

---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: mlflow

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: python:3.10
          ports:
            - containerPort: 5000

          command: ["/bin/sh", "-c"]

          args:
            - |
              pip install --no-cache-dir mlflow boto3 psycopg2-binary && \
              mlflow server \
                --backend-store-uri sqlite:///mlflow.db \
                --default-artifact-root s3://mlops-kubeflow-project-data/mlflow \
                --host 0.0.0.0 \
                --port 5000
